[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/GFX/Effects/Particles/blue_particle.png" type="Texture" id=1]
[ext_resource path="res://src/Effects/Particle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.03574, 5.11644 )

[node name="Particle" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LifeTime" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Particle_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
